--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DATABASE_PORT = 5432
 DATABASE_USERNAME = postgres
 DATABASE_NAME = pure
 DATABASE_PASSWORD = 12345678
+AT_SECRET=at-secret
+RT_SECRET=rt-secret
