--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@nestjs/platform-express": "^10.4.13",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "@prisma/client": "^6.1.0",
     "@types/passport-jwt": "^4.0.1",
+    "argon2": "^0.41.1",
     "auth": "^1.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -39,6 +41,7 @@
     "pg": "^8.11.5",
     "platform-express": "^0.0.13",
     "postgres": "^3.4.4",
+    "prisma": "^6.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.3",
